# QueenBee-Hive--UI

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: build-arm.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: camera.rs  commands.rs  lib.rs  provisioning_ipc.rs  system.rs  voice_agent_ipc.rs
src/components/: EyeTracker.tsx
src/components/miniapps/: MiniAppsPage.css  MiniAppsPage.tsx
src/components/miniapps/camera/: CameraApp.tsx
src/components/overlay/: SystemOverlay.tsx
src/components/ui/: button.tsx  slider.tsx
src/hooks/: useSwipeGesture.ts
src/styles/: globals.css
src/types/: system.ts
