[package]
name = "honeybee-kiosk-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "honeybee_kiosk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "io-util", "net"] }
notify = "8"
base64 = "0.22"
dirs = "6"
tauri-plugin-fs = "2"
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] }
image = "0.25"
chrono = "0.4"
parking_lot = "0.12"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

